# simple-http-get-server

./: Cargo.toml  README.md
src/: main.rs
