[package]
name = "pima"
version = "0.1.0"
authors = ["LeoDevSecOps <leodevsecops@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micro_http = { git = "https://github.com/sameo/micro-http", branch = "main" }
clap = { version = "2.33.3", features = ["wrap_help"] }
